help and support after merging